plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.liquibase.gradle' version '2.2.2'
}

group = 'com.cleanproject'
version = '0.0.1-SNAPSHOT'
description = 'project-implementation-of-clean-architecture'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

def propOrEnv = { String key, String defaultValue ->
    project.findProperty(key)?.toString()
            ?: System.getenv(key)
            ?: defaultValue
}

def dbUrl      = propOrEnv("DB_POSTGRES_URL", "jdbc:postgresql://localhost:5432/spring_template_db?sslmode=disable")
def dbUsername = propOrEnv("DB_POSTGRES_USERNAME", "user_admin")
def dbPassword = propOrEnv("DB_POSTGRES_PASSWORD", "password_secret")

bootRun {
    environment "DB_POSTGRES_URL", dbUrl
    environment "DB_POSTGRES_USERNAME", dbUsername
    environment "DB_POSTGRES_PASSWORD", dbPassword
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2'
    testRuntimeOnly 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //Database
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.liquibase:liquibase-core:5.0.2'

    //Liquibase
    liquibaseRuntime 'org.liquibase:liquibase-core:5.0.2'
    liquibaseRuntime 'org.postgresql:postgresql'
    liquibaseRuntime 'info.picocli:picocli:4.7.7'
}

liquibase {

    activities {

        register("main") {

            changelogFile 'src/main/resources/db/changelog/db.changelog-master.yaml'
            url dbUrl
            username dbUsername
            password dbPassword
            driver 'org.postgresql.Driver'
            logLevel 'info'
        }

    }
    runList = 'main'
}
tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(Test).configureEach {
    jvmArgs("-XX:+EnableDynamicAgentLoading")
}